Added PHP8 support.

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "ssnepenthe/color-utils": "~0.4",
         "imgix/imgix-php": "^2.1.0",
         "kraken-io/kraken-php": "^1.2",
-        "imageoptim/imageoptim": "^1.3",
+        "imageoptim/imageoptim": "^1.4",
         "aws/aws-sdk-php": "^3.0.0",
         "google/cloud": "~0.20"
     },
@@ -51,5 +51,17 @@
         "changelogUrl": "https://raw.githubusercontent.com/aelvan/Imager-Craft/craft3/CHANGELOG.md",
         "components": {},
         "class": "aelvan\\imager\\Imager"
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/zelenovas/php-imageoptim-api"
+        }
+    ],
+    "config": {
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true,
+            "craftcms/plugin-installer": true
+        }
     }
 }
